--- a/about.html
+++ b/about.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Goblins | About</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="/css_folder/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
+
 <body>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
+    <nav class="clearfix">
+        <div>
+            <button id="hamburgerBtn">&#9776;</button>
+            <ul id="primaryNav">
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="index.html"> Home</a></li>
             </ul>
-        </nav>
-    </div>
-    <h1>About</h1>
+        </div>
+    </nav>
+
+    <header>
+        <h1>About</h1>
+    </header>
+
     <!--CSS Animation-->
     <div class="wrapper">
         <div class="flame-wrapper">
@@ -27,23 +35,32 @@
             <div class="flame white"></div>
         </div>
     </div>
-    <div>
+
+    <main>
         <h2>Welcome!</h2>
-        <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp of aggressive
-            goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses along the way!
+        <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp of
+            aggressive
+            goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses along
+            the way!
         </p>
         <h3> Features Coming Soon!</h3>
         <p>Here are a list of features we plan on implenting over the next couple of months. Including:</p>
         <ul>
-            <li>Choosing a class:
+            <li class="classList">Choosing a class:
                 <ul>
-                    <li>Warrior</li>
-                    <li>Rogue</li>
-                    <li>Wizard</li>
+                    <li class="rpgClass">Warrior
+                        <div class="box">Picture of warrior</div>
+                    </li>
+                    <li class="rpgClass">Rogue
+                        <div class="box">Picture of Rogue</div>
+                    </li>
+                    <li class="rpgClass">Wizard
+                        <div class="box">Picture of Wizard</div>
+                    </li>
                 </ul>
             </li>
-            <li>
-                Choosing a race:
+            <br>
+            <li>Choosing a race:
                 <ul>
                     <li>Human</li>
                     <li>Elf</li>
@@ -85,15 +102,29 @@
             </tr>
         </table>
         <p>A few other things to look forward to are: </p>
-            <ul>
-                <li>New enemies</li>
-                <li>Dice rolls opening up new scenarios</li>
-                <li>And a contact form for you to send suggestions in.</li>
+        <ul>
+            <li>New enemies</li>
+            <li>Dice rolls opening up new scenarios</li>
+            <li>And a contact form for you to send suggestions in.</li>
+        </ul>
 
-            </ul>
-    </div>
+
+        <div class="test">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+        </div>
+
+
+    </main>
     <footer>
 
     </footer>
+    <script src="/js_folder/main.js"></script>
 </body>
+
 </html>
