I added the <p> tags to the home page. I finished adding the javascript functions to make them display to block from hidden whenever the button was pressed.

--- a/about.html
+++ b/about.html
@@ -32,14 +32,16 @@
 
     <main>
         <div class="mainContent">
-            <h2>Welcome!</h2>
+            <section class="intro">
+                <h2>Welcome!</h2>
 
-            <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp of
-                aggressive
-                goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses
-                along
-                the way!
-            </p>
+                <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp of
+                    aggressive
+                    goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses
+                    along
+                    the way!
+                </p>
+            </section>
             <h3> Features Coming Soon!</h3>
             <p>Here are a list of features we plan on implenting over the next couple of months. Including:</p>
             <div class="classList">
