I removed the lists and updated the content to be dynamic based on flexbox and the screen width. I also removed the temporary divs and replaced them with pitcures.

--- a/about.html
+++ b/about.html
@@ -32,44 +32,102 @@
 
     <main>
         <div class="mainContent">
-            <section class="intro">
-                <h2>Welcome!</h2>
 
-                <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp of
-                    aggressive
-                    goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses
-                    along
-                    the way!
-                </p>
-            </section>
-            <h3> Features Coming Soon!</h3>
+            <h2>Welcome!</h2>
+
+            <p>Goblins is a simple choose your own adventure game. You are an adventurer, hired to bring down a camp
+                of
+                aggressive
+                goblins that are camped outide of town. Becareful though, as there may be traps and other surpirses
+                along
+                the way!
+            </p>
+
+            <h2> Features Coming Soon!</h2>
             <p>Here are a list of features we plan on implenting over the next couple of months. Including:</p>
-            <div class="classList">
-                <ul>
-                    <li class="classList">Choosing a class:
-                        <ul>
-                            <li class="rpgClass">Warrior
-                                <div class="box">Picture of warrior</div>
-                            </li>
-                            <li class="rpgClass">Rogue
-                                <div class="box">Picture of Rogue</div>
-                            </li>
-                            <li class="rpgClass">Wizard
-                                <div class="box">Picture of Wizard</div>
-                            </li>
-                        </ul>
-                    </li>
-                    <br>
-                    <li>Choosing a race:
-                        <ul>
-                            <li>Human</li>
-                            <li>Elf</li>
-                            <li>Dwarf</li>
-                        </ul>
-                    </li>
-                </ul>
+            <div class="List">
+                <h2>Choosing a class:</h2>
+                <div class="rpgColumn">
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Warrior</p>
+                            <div>
+                                <p class="description">This class is centered around strength and physcial combat,
+                                    usually using melee weapons.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/sword.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Rogue</p>
+                            <div>
+                                <p class="description">This class is centered around stealth and cunning, usually using
+                                    traps and quiet means to avoid combat entirely.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/daggers.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Wizard</p>
+                            <div>
+                                <p class="description">This class is centered around using spells in combat.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/staff.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h3>Weapons</h3>
+            <br>
+            <div class="List">
+                <h2>Choosing a race:</h2>
+                <div class="rpgColumn">
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Human</p>
+                            <div>
+                                <p class="description">Humans are creative trail-blazers, never being afraid of seeing
+                                    how far they can go.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/human.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Elf</p>
+                            <div>
+                                <p class="description">Elves are a people of magic, but mostly keeping to themselves.
+                                </p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/elf.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="Direction">
+                        <div class="classMedium DirectionLarge">
+                            <p class="Names">Dwarf</p>
+                            <div>
+                                <p class="description">Dwarves are mountain dwellers who are almost always working on
+                                    something.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="Picture" src="/img_folder/dwarf.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2>Weapons</h2>
             <table>
                 <tr>
                     <th>Name</th>
@@ -114,18 +172,6 @@
             </ul>
 
 
-            <div class="test">
-                <div class="box">1</div>
-                <div class="box">2</div>
-                <div class="box">3</div>
-                <div class="box">4</div>
-                <div class="box">5</div>
-                <div class="box">6</div>
-                <div class="box">7</div>
-            </div>
-
-        
-        
     </main>
     <footer>
         <!--CSS Animation-->
@@ -136,7 +182,7 @@
                 <div class="flame gold"></div>
                 <div class="flame white"></div>
             </div>
-    </div>
+        </div>
     </footer>
     <script src="/js_folder/main.js"></script>
 </body>
