Reworked the CSS animation and updated the README.md

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                 </tr>
             </table>
             <p>Click here to test how much damage the great sword could do.</p>
-            <button onclick="document.getElementById('demo').innerHTML = final()">Click Me</button>
+            <button onclick="document.getElementById('demo').innerHTML = final()">Roll for damage</button>
             <p id="demo"></p>
             <br>
             <p>A few other things to look forward to are: </p>
@@ -177,8 +177,8 @@
         <!--CSS Animation-->
         <div class="wrapper">
             <div class="flame-wrapper">
-                <div class="flame red"></div>
-                <div class="flame orange"></div>
+                <div class="flame darkgreen"></div>
+                <div class="flame green"></div>
                 <div class="flame gold"></div>
                 <div class="flame white"></div>
             </div>
