--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <!--CSS Animation-->
         <div class="wrapper">
             <div class="flame-wrapper">
-                <div class="flame red"></div>
-                <div class="flame orange"></div>
+                <div class="flame darkgreen"></div>
+                <div class="flame green"></div>
                 <div class="flame gold"></div>
                 <div class="flame white"></div>
             </div>
