--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link href="/css_folder/style.css" rel="stylesheet">
+    <link href="css_folder/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
@@ -111,7 +111,7 @@
             </div>
         </div>
     </footer>
-    <script src="/js_folder/main.js"></script>
+    <script src="js_folder/main.js"></script>
 </body>
 
 </html>
